--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -143,7 +143,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
 
             <ImageView
                 android:layout_width="50dp"
@@ -153,7 +154,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="kakao"
-                android:textColor="#fffff"
+                android:textColor="#FFFFFF"/>
 
         </LinearLayout>
 
@@ -161,7 +162,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
 
             <ImageView
                 android:layout_width="50dp"
@@ -171,7 +173,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="naver"
-                android:textColor="#fffff"
+                android:textColor="#FFFFFF"/>
 
         </LinearLayout>
 
@@ -179,7 +181,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
 
             <ImageView
                 android:layout_width="50dp"
@@ -188,8 +191,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="kakao"
-                android:textColor="#fffff"
+                android:text="apple"
+                android:textColor="#FFFFFF"/>
 
         </LinearLayout>
 
@@ -197,7 +200,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
 
             <ImageView
                 android:layout_width="50dp"
@@ -207,7 +211,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="google"
-                android:textColor="#fffff"
+                android:textColor="#FFFFFF"/>
 
         </LinearLayout>
 
